feat: added example package with tests (wip)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,4 @@ jobs:
             yarn --prefer-offline --frozen-lockfile --no-progress --silent
 
       - run: yarn lint
+      - run: yarn test
