--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/eslint": "^8.4.1",
     "@types/jest": "^27.4.1",
+    "all-contributors-cli": "^6.20.0",
     "commitizen": "^4.2.4",
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
