--- a/packages/plop-action-eslint/package.json
+++ b/packages/plop-action-eslint/package.json
@@ -15,7 +15,7 @@
     "LICENSE"
   ],
   "engines": {
-    "node": ">=14.0.0"
+    "node": "^14.13.1 || ^16.x"
   },
   "engineStrict": true,
   "scripts": {
@@ -28,11 +28,11 @@
     ]
   },
   "peerDependencies": {
-    "eslint": "^8.10.0",
-    "plop": "^3.0.5"
+    "eslint": "^8.19.0",
+    "plop": "^3.1.1"
   },
   "dependencies": {
-    "tslib": "^2.3.1"
+    "tslib": "^2.4.0"
   },
   "keywords": [
     "eslint",
