--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": ">=14.0.0"
+    "node": "^14.13.1 || ^16.x"
   },
   "engineStrict": true,
   "scripts": {
