--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lerna:publish": "lerna publish from-package",
     "lerna:version": "HUSKY_SKIP_HOOKS=1 lerna version --no-commit-hooks --no-changelog  --no-private",
     "lint": "tsc && eslint --cache \"./**/*.{ts,tsx}\"",
-    "prelerna:publish": "node ./scripts/prepublish.js",
+    "prelerna:publish": "node ./scripts/prepublish.js && yarn build",
     "prepare": "is-ci || husky install",
     "test": "turbo run test --include-dependencies"
   },
