--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -9,9 +9,8 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "^14.13.1 || ^16.x"
+    "node": "^14.13.1 || ^16.x || ^18.x"
   },
-  "engineStrict": true,
   "scripts": {
     "test": "rimraf lib && plop Template \"Test\" && node ./__tests__/validate.test.js"
   },
