--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,18 @@ concurrency:
 jobs:
   validate:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8
 
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@16352bb09bc672a073e326c2cc1d3d7d2a3e577e
         with:
-          node-version: 14
+          node-version: ${{ matrix.node-version }}
           cache: "yarn"
 
-      - uses: bahmutov/npm-install@v1.7.11
+      - uses: bahmutov/npm-install@4a274d026feb3c5c4273ac7bbe74c90a7e07cd08
         with:
           install-command:
             yarn --prefer-offline --frozen-lockfile --no-progress --silent
