--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           install-command:
             yarn --prefer-offline --frozen-lockfile --no-progress --silent
+            --ignore-engines
 
       - run: yarn lint
       - run: yarn test
