--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "^14.13.1 || ^16.x || ^18.x"
+    "node": "^14.13.1 || ^16.x || ^18.x || ^19.x || ^20.x"
   },
   "scripts": {
     "build": "turbo run build",
