--- a/packages/plop-action-eslint/package.json
+++ b/packages/plop-action-eslint/package.json
@@ -15,7 +15,7 @@
     "LICENSE"
   ],
   "engines": {
-    "node": "^14.13.1 || ^16.x || ^18.x"
+    "node": ">=18"
   },
   "scripts": {
     "build": "rimraf lib && tsc --noEmit false --outDir lib"
