--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
   "license": "MIT",
   "engines": {
-    "node": "^14.13.1 || ^16.x || ^18.x || ^19.x || ^20.x"
+    "node": ">=18"
   },
   "scripts": {
     "build": "turbo run build",
     "lerna:publish": "lerna publish from-package",
     "lerna:version": "HUSKY_SKIP_HOOKS=1 lerna version --no-commit-hooks --no-changelog  --no-private",
-    "lint": "tsc && eslint --cache \"./**/*.{ts,tsx}\"",
+    "lint": "tsc && eslint \"./**/*.{ts,tsx}\"",
     "prelerna:publish": "node ./scripts/prepublish.js && yarn build",
     "prepare": "is-ci || husky install",
-    "test": "turbo run test --include-dependencies"
+    "test": "turbo run test"
   },
   "workspaces": {
     "packages": [
@@ -25,31 +25,31 @@
     ]
   },
   "devDependencies": {
-    "@types/eslint": "^8.4.5",
-    "@types/jest": "^27.4.1",
-    "all-contributors-cli": "^6.20.0",
-    "commitizen": "^4.2.4",
+    "@types/eslint": "^8.56.5",
+    "@types/jest": "^29.5.12",
+    "all-contributors-cli": "^6.26.1",
+    "commitizen": "^4.3.0",
     "copyfiles": "^2.4.1",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-ns-ts-base": "3.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.30.1",
-    "husky": "^8.0.1",
+    "eslint-config-ns-ts-base": "4.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "husky": "^9.0.11",
     "is-ci": "^3.0.1",
-    "jest": "^27.5.1",
-    "lerna": "^5.1.8",
+    "jest": "^29.7.0",
+    "lerna": "^5.6.2",
     "lerna-changelog": "^2.2.0",
-    "plop": "^3.1.1",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "turbo": "^1.3.1",
-    "typescript": "^4.7.4"
+    "plop": "^3.1.2",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
+    "turbo": "^1.12.5",
+    "typescript": "^5.4.2"
   },
   "config": {
     "commitizen": {
