--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,7 @@
 {
   "npmClient": "yarn",
-  "packages": [
-    "packages/*"
-  ],
   "changelog": {
-    "ignoreCommitters": [
-      "allcontributors",
-      "dependabot"
-    ],
+    "ignoreCommitters": ["allcontributors", "dependabot"],
     "labels": {
       "enhancement": ":rocket: New Feature",
       "bug": ":bug: Bug Fix"
@@ -16,26 +10,14 @@
   },
   "command": {
     "version": {
-      "allowBranch": [
-        "main",
-        "next"
-      ]
+      "allowBranch": ["main", "next"]
     },
     "publish": {
-      "allowBranch": [
-        "main",
-        "next"
-      ],
+      "allowBranch": ["main", "next"],
       "conventionalCommits": true,
       "message": "chore(release): %s"
     }
   },
-  "ignoreChanges": [
-    "*.md",
-    "*.txt",
-    "__test__/**",
-    "**/__tests__/**"
-  ],
-  "useWorkspaces": true,
+  "ignoreChanges": ["*.md", "*.txt", "__test__/**", "**/__tests__/**"],
   "version": "0.4.0"
 }
